// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackModel can build a track adding tiles at the first position with a particular type 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
      "curved-tile-2" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-15",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-14",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track adding tiles at the first position with the default specifications 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 2,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-13",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-12",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track adding tiles at the last position with a particular type 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "curved-tile-2" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-11",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track adding tiles at the last position with the default specifications 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-10",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track for rendering using a start position and angle 1`] = `
Object {
  "height": 355.56349186104046,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 45,
      "id": "id-69",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-69",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 100,
      "y": 100,
    },
    Object {
      "angle": 45,
      "id": "id-70",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-70",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 22.218254069479784,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "id": "id-71",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-71",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -55.56349186104045,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "id": "id-72",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-72",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -133.3452377915607,
      "y": 100.00000000000001,
    },
    Object {
      "angle": 225,
      "id": "id-73",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-73",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -133.3452377915607,
      "y": 22.218254069479798,
    },
    Object {
      "angle": 225,
      "id": "id-74",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-74",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -55.563491861040475,
      "y": -55.56349186104045,
    },
    Object {
      "angle": 315,
      "id": "id-75",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-75",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 22.218254069479755,
      "y": -55.56349186104046,
    },
    Object {
      "angle": 315,
      "id": "id-76",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-76",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 100,
      "y": 22.21825406947974,
    },
  ],
  "width": 355.56349186104046,
  "x": -194.45436482630058,
  "y": -116.67261889578035,
}
`;

exports[`TrackModel can build a track for rendering using default position 1`] = `
Object {
  "height": 310,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 0,
      "id": "id-61",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-61",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "id": "id-62",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-62",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 0,
      "y": 110,
    },
    Object {
      "angle": 90,
      "id": "id-63",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-63",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -55,
      "y": 165,
    },
    Object {
      "angle": 90,
      "id": "id-64",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-64",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -165,
      "y": 165,
    },
    Object {
      "angle": 180,
      "id": "id-65",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-65",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -220,
      "y": 110,
    },
    Object {
      "angle": 180,
      "id": "id-66",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-66",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -220,
      "y": 0,
    },
    Object {
      "angle": 270,
      "id": "id-67",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-67",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -165,
      "y": -55.00000000000001,
    },
    Object {
      "angle": 270,
      "id": "id-68",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-68",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 310,
  "x": -265,
  "y": -100.00000000000003,
}
`;

exports[`TrackModel can build a track inserting tiles after a position in the middle 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-55",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-56",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-58",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-57",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles after an inexistent position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-48",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles after the first position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 3,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-49",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-51",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-50",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles after the last position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 3,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-52",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-53",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-54",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles after with a particular type 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
      "curved-tile-2" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-59",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      CurvedTileModel {
        "direction": "left",
        "id": "id-60",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles before a position in the middle 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-42",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-45",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-43",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-44",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles before an inexistent position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-35",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles before the first position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 3,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-38",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-36",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-37",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles before the last position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 3,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-39",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-41",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-40",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track inserting tiles before with a particular type 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
      "curved-tile-2" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-47",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-46",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track removing tiles at inexistent position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-25",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track removing tiles from the end 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 2,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-22",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-23",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track removing tiles from the middle 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 2,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-19",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-21",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track removing tiles from the start 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 2,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-17",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-18",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track replacing tiles at inexistent position 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-34",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track replacing tiles with a tile having a particular type 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 2,
      "curved-tile-2" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-30",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-31",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      CurvedTileModel {
        "direction": "left",
        "id": "id-33",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track replacing tiles with a tile having default specifications 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 3,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-26",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-29",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-28",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can build a track with the given size 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {},
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can clear the list 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {},
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can export to an object 1`] = `
Array [
  Object {
    "direction": "right",
    "ratio": 1,
    "type": "curved-tile",
  },
]
`;

exports[`TrackModel can import from an object 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-79",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can import from an object 2`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
      "curved-tile-1" => 2,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      CurvedTileModel {
        "direction": "left",
        "id": "id-80",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-81",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-82",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 1`] = `
Counter {
  "counters": Map {},
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 2`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 1,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 3`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 2,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 4`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 1,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 5`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 0,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 6`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 0,
    "straight-tile-1" => 1,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 7`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 0,
    "straight-tile-1" => 2,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 8`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 0,
    "straight-tile-1" => 3,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 9`] = `
Counter {
  "counters": Map {},
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 10`] = `
Counter {
  "counters": Map {
    "straight-tile-1" => 3,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the stats 11`] = `
Counter {
  "counters": Map {
    "straight-tile-1" => 3,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {},
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 2`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "curved-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      CurvedTileModel {
        "direction": "right",
        "id": "id-84",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 3`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "curved-tile-1" => 2,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      CurvedTileModel {
        "direction": "right",
        "id": "id-85",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-84",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 4`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "curved-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      CurvedTileModel {
        "direction": "right",
        "id": "id-85",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 5`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "curved-tile-1" => 0,
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-86",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 6`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "curved-tile-1" => 0,
      "straight-tile-1" => 2,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-87",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-86",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 7`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {
      "curved-tile-1" => 0,
      "straight-tile-1" => 3,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-87",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-86",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-88",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 8`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {},
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 9`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
  "stats": Counter {
    "counters": Map {},
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-89",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-90",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-91",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can notify changes for changes applying to the tiles 10`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 2,
    "barrierWidth": 1,
    "laneWidth": 10,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 3,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-89",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-90",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-91",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`TrackModel can rebuilds the stats 1`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 1,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can rebuilds the stats 2`] = `
Counter {
  "counters": Map {
    "curved-tile-1" => 0,
    "curved-tile-3" => 1,
  },
  "notify": [Function],
  "subscribe": [Function],
}
`;

exports[`TrackModel can set the specifications of the tile 1`] = `
TrackModel {
  "specs": TileSpecifications {
    "barrierChunks": 2,
    "barrierWidth": 1,
    "laneWidth": 10,
  },
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 1,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "subscribe": [Function],
  "tiles": List {
    "list": Array [
      StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
        },
      },
    ],
    "notify": [Function],
    "subscribe": [Function],
  },
}
`;
